(raf) Core: Cleanup to Driver initialization routines and system callbacks (power) (r789)
(raf) Core: Re-enabled HOME menu. (r789,790)
(sandberg) 3DUI: Fixed a memory error and removed some traces (to avoid context switches) (r792)
(sandberg) 3DUI: Disabled the visualizer until I've made it more stable (it was causing resets all the time) (r793)

0.38.03 (r767) (2006-02-03)
NEW FEATURES
(sandberg) 3DUI: Messages from the PSPRadio (e.g. when downloading the list from shoutcast.com) are now shown in a separate panel. (r746)
(sandberg) 3DUI: The UI now supports 4 different fonts (Lists, Scroller, System info and Messages/Errors). (r747)
(sandberg) 3DUI: Both messages and errors are now displayed using the native panels, scaled to fit the message length. (r748)
(sandberg) 3DUI: Support for colored native panels has been added, which is used for the message and error panels. (r748)
(raf) TextUI: Now clock format is still compatible and configurable as in 0.37-Final. New mode added (0). If set to that in the config file, then the format is retrieved from the system configuration. (r752)
(raf) Core: Now MP3 report the current elapsed time (r755)
(raf) TextUI: Added support to display current (implemented) and total (not implemented) time of the playing stream. (r755)
(raf) Core: Now total time is also calculated for MP3s (VBR MP3 will probably show wrong data). (r756)
(sandberg) Core: Added support for visualization effects has been added. (r757)
(sandberg) 3DUI: Visualization panel added the the 3DUI. (r757)
(sandberg) 3DUI: Added support for using different skins on the main panels and the message/error panels. (r757)
(raf) Core: OGG Files now also report their time (r758)
(raf) Core: Switched from Tremor to regular OGG Vorbis library (slower, but may solve issues with ogg processing) (r759)
(sandberg) 3DUI: Added support for displaying current and total time for local files. (r760)